[package]
name = "pygrandma"
version = "0.2.0"
edition = "2018"

description = "Generates artificial fractal datasets"
readme = "../README.md"

authors = ["Sven Cattell <scattell@gmail.com>"]

license = "Apache-2.0"

[toolchain]
channel = "nightly"

[dependencies]
pyo3 = { version = "0.10.1", features = ["extension-module"] }
numpy = "0.9.0"
ndarray = "0.13.1"
rand = "0.7.3"

[lib]
name = "fractal_ml"
crate-type = ["cdylib"]
